# r_BRN_KB_REVIEW-main

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test_conflict_document.txt
app/: main.py
app/analysis/: analyzers.py  judge_aggregator.py  pre_filter.py  prompts.py  review_runner.py  training_quality.py
app/api/: auth.py
app/api/endpoints/: review_api.py
app/cache_db/: redis_client.py
app/core/: config.py
app/database_layer/: db_config.py  db_models.py  db_schemas.py
app/graph_db/: neo4j_reader.py
app/llm/: judge_factory.py
docs/: 422 Unprocessable Entity.docx  API.md  ARCHITECTURE.md  BRN_KB_Review_API.postman_collection.json  COSTING.md  DATABASE_SCHEMA.md  QUICKSTART.md  TODO.md  kb_review_schema.sql
tests/: conftest.py  test_analyzers.py  test_api.py  test_auth.py  test_change_detection.py  test_issue_status.py  test_judge_aggregator.py  test_neo4j_reader.py  test_pre_filter.py  test_redis_client.py  test_review_runner.py  test_schemas.py  test_training_quality.py
